upgrade to professional Maven project structure